--- a/Runner_Game/Config/DefaultEngine.ini
+++ b/Runner_Game/Config/DefaultEngine.ini
@@ -2,12 +2,12 @@
 GameName=Runner_Game
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/Maps/Map_Level.Map_Level
+EditorStartupMap=/Game/Maps/Main_Menu.Main_Menu
 TransitionMap=
 bUseSplitscreen=True
 TwoPlayerSplitscreenLayout=Horizontal
 ThreePlayerSplitscreenLayout=FavorTop
-GameDefaultMap=/Game/Maps/Map_Level.Map_Level
+GameDefaultMap=/Game/Maps/Main_Menu.Main_Menu
 GlobalDefaultGameMode=/Game/2DSideScrollerBP/Blueprints/2DSideScrollerGameMode.2DSideScrollerGameMode_C
 GlobalDefaultServerGameMode=None
 
