--- a/Runner_Game/Config/DefaultEngine.ini
+++ b/Runner_Game/Config/DefaultEngine.ini
@@ -2,12 +2,12 @@
 GameName=Runner_Game
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/Maps/Main_Menu.Main_Menu
+EditorStartupMap=/Game/Maps/Map_Level.Map_Level
 TransitionMap=
 bUseSplitscreen=True
 TwoPlayerSplitscreenLayout=Horizontal
 ThreePlayerSplitscreenLayout=FavorTop
-GameDefaultMap=/Game/Maps/Main_Menu.Main_Menu
+GameDefaultMap=/Game/Maps/Map_Level.Map_Level
 GlobalDefaultGameMode=/Game/2DSideScrollerBP/Blueprints/2DSideScrollerGameMode.2DSideScrollerGameMode_C
 GlobalDefaultServerGameMode=None
 
@@ -163,5 +163,3 @@ SyncSceneSmoothingFactor=0.000000
 AsyncSceneSmoothingFactor=0.990000
 InitialAverageFrameRate=0.016667
 PhysXTreeRebuildRate=10
-
-
